added more ui elements

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
   google_sign_in: ^6.0.2
+  jitsi_meet_wrapper: ^0.0.6
 
 dev_dependencies:
   flutter_test:
